--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <meta name="twitter:image" content="https://tu-dominio.com/Sources/Logo/logo.png">
 
 
-    <link rel="icon" href="/Sources/Logo/logo.png" type="image/png">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="icon" href="Sources/Logo/logo.png" type="image/png">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
 
     <title>Restaurante Sakura & Gaucho</title>
 </head>
 <body>
     <header class="header">
-        <img src="/Sources/Menu-hamburguesa.png" alt="Menu hamburguesa" class="menu-icon" id="menu-icon">
+        <img src="Sources/Menu-hamburguesa.png" alt="Menu hamburguesa" class="menu-icon" id="menu-icon">
         
         <nav class="nav" id="nav">
             <button class="close-btn" id="close-btn">&times;</button>
@@ -42,7 +42,7 @@
                 <li><a href="#contact">Ubicación y contacto</a></li>
             </ul>
         </nav>
-        <img src="/Sources/Logo/logo.png" alt="logo Sakura & Gaucho">
+        <img src="Sources/Logo/logo.png" alt="logo Sakura & Gaucho">
     </header>
 
     <main class="main-content">
@@ -52,7 +52,7 @@
                 <p>Disfruta de la mejor comida japonesa en un ambiente acogedor.</p>
             </div>
             
-            <img src="/Sources/Platos/Principal/Ramen_de_Pollo.jpg" alt="Ramen con pollo">
+            <img src="Sources/Platos/Principal/Ramen_de_Pollo.jpg" alt="Ramen con pollo">
             <a href="#reserve">¡Reserva tu mesa ya!</a>
         </section>
 
@@ -68,26 +68,26 @@
                 <h3>Entrada</h3>
 
                 <ul class="menu-entrada">
-                    <li><h4>Choclo con papas</h4><img src="/Sources/Platos/Entrada/choclo_con_papas.jpg" alt="Entrada Choclo con papas"></li>
+                    <li><h4>Choclo con papas</h4><img src="Sources/Platos/Entrada/choclo_con_papas.jpg" alt="Entrada Choclo con papas"></li>
 
-                    <li><h4>Canapé de sushi de queso y salmon</h4><img src="/Sources/Platos/Entrada/Canapé_de_salmon_con_queso.jpg" alt="Entrada Canapé de sushi de queso y salmon"></li>
+                    <li><h4>Canapé de sushi de queso y salmon</h4><img src="Sources/Platos/Entrada/Canapé_de_salmon_con_queso.jpg" alt="Entrada Canapé de sushi de queso y salmon"></li>
                 </ul>
                 <h3>Plato principal</h3>
 
                 <ul class="menu-principal">
-                    <li><h4>Ramen de pollo</h4><img src="/Sources/Platos/Principal/Ramen_de_Pollo.jpg" alt="Principal Ramen de pollo"></li>
+                    <li><h4>Ramen de pollo</h4><img src="Sources/Platos/Principal/Ramen_de_Pollo.jpg" alt="Principal Ramen de pollo"></li>
 
-                    <li><h4>Tempura de verduras</h4><img src="/Sources/Platos/Principal/Tempura_de_verdura.jpg" alt="Principal Tempura de verdura"></li>
+                    <li><h4>Tempura de verduras</h4><img src="Sources/Platos/Principal/Tempura_de_verdura.jpg" alt="Principal Tempura de verdura"></li>
 
-                    <li><h4>Sushi variado</h4><img src="/Sources/Platos/Principal/sushi.jpg" alt="Principal Sushi variado"></li>
+                    <li><h4>Sushi variado</h4><img src="Sources/Platos/Principal/sushi.jpg" alt="Principal Sushi variado"></li>
                 </ul>
 
                 <h3>Postre</h3>
 
                 <ul class="menu-postre">
-                    <li><h4>Helado de té verde</h4><img src="/Sources/Platos/Postre/Helado_de_té_verde.jpeg" alt="Postre Helado de te verde"></li>
+                    <li><h4>Helado de té verde</h4><img src="Sources/Platos/Postre/Helado_de_té_verde.jpeg" alt="Postre Helado de te verde"></li>
 
-                    <li><h4>Frutas frescas con miel</h4><img src="/Sources/Platos/Postre/frutas_frescas_con_miel.jpg" alt="Postre Frutas frescas con miel"></li>
+                    <li><h4>Frutas frescas con miel</h4><img src="Sources/Platos/Postre/frutas_frescas_con_miel.jpg" alt="Postre Frutas frescas con miel"></li>
                 </ul>
             </section>
         </section>
@@ -136,5 +136,5 @@
         <p>Contacto: <a href="mailto:SakurayGaucho@gmail.com">SakurayGaucho@gmail.com</a></p>
      </footer>
 </body>
-<script src="/JS/script.js"></script>
+<script src="JS/script.js"></script>
 </html>
